crates/compiler/tests/parse_errors/string_end.elm
module Main exposing (..)

x = "abc
